fix(package.json): fix .eslintcache location
move eslint cache location to ./node_modules/.cache/.eslintcache

--- a/package.json
+++ b/package.json
@@ -69,6 +69,6 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": "eslint --cache --fix --cache-location ./node_modules/.cache/.eslintcache"
   }
 }
