--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.50.1",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -71,7 +74,7 @@
   "lint-staged": {
     "*.js": "eslint --cache --fix --cache-location ./node_modules/.cache/.eslintcache"
   },
-  "prettier":{
+  "prettier": {
     "singleQuote": true,
     "printWidth": 125
   }
