--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,14 @@
           "tsx": "never"
         }
     ],
-    "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }],
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": ["function-declaration", "arrow-function"],
+        "unnamedComponents": ["function-expression", "arrow-function"]
+      }
+    ],
+    "quotes": ["error", "single", { "allowTemplateLiterals": true }]
   }
 }
