--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
+    "react-bootstrap-drawer": "^1.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.50.1",
     "typescript": "~4.1.5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
