--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.50.1",
     "typescript": "~4.1.5"
   },
