--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
+    "react-bootstrap-range-slider": "^3.0.4",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.0",
