--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react-dom": "^18.0.4",
     "@types/react-redux": "^7.1.7",
     "async-mutex": "^0.3.2",
     "bootstrap": "^5.1.3",
+    "msw": "^0.39.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-bootstrap-range-slider": "^3.0.4",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@testing-library/dom": "^8.13.0",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "commitizen": "^4.2.4",
