test(package.json): add test:nowatch script
add script for testing without watching

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:nowatch": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "release": "standard-version",
     "commit": "git add -A && cz",
