refactor: change folder structure
change folder structure to improve developer experience

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"    
   },
-  "include": ["src"]
+  "include": ["src", "__mocks__/utils.tsx", "__mocks__/data.ts", "__mocks__/server.ts"]
 }
