--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:nowatch": "react-scripts test --watchAll=false",
+    "test:coverage": "react-scripts test --watchAll=false --coverage",
     "eject": "react-scripts eject",
     "release": "standard-version",
     "commit": "git add -A && cz",
@@ -94,5 +95,19 @@
   "prettier": {
     "singleQuote": true,
     "printWidth": 125
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/modules/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.api.ts"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 90,
+        "statements": 90
+      }
+    }
   }
 }
