refactor(tsconfig.json): remove redundant entries
remove redundant entries from include

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"    
   },
-  "include": ["src", "src/testUtils/utils.tsx", "src/testUtils/data.ts", "src/testUtils/server.ts"]
+  "include": ["src"]
 }
