--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'yarn'
     - name: Install dependencies
       run: yarn install --frozen-lockfile
     - name: Build
@@ -50,7 +50,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'yarn'
     - name: Install dependencies
       run: yarn install --frozen-lockfile
     - name: Build
