refactor: add license

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-redux-typescript-boilerplate",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
